update no index

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
     <title>Relogio Digital | Norwal</title>
 </head>
 <body>
-    <p>Amor</p>
+    <p>Amorr</p>
     <div class="relogio">
         <div>
             <span id="horas">00</span>
